# tauri-specta

./: Cargo.toml
examples/app/src/: bindings2-jsdoc.js  bindings2.ts
examples/app/src-tauri/: Cargo.toml
examples/app/src-tauri/src/: main.rs
examples/app/src/bindings4/: events.ts  types.ts
examples/app/src/bindings4/commands/: blue_struct.ts  index.ts  library_service.ts  nested.ts
macros/: Cargo.toml
src/: lib.rs
src/integrations/: array.rs  mod.rs  sqlx.rs
