[package]
name = "souchy-tauri-specta-macros"
description = "Completely typesafe Tauri commands"
version = "2.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>", "Souchy <robyn.g@hotmail.fr>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Souchy/tauri-specta"
documentation = "https://docs.rs/tauri-specta/latest/tauri-specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1"
quote = "1"
syn = "2"
darling = "0.20"
